# finite_element

./: CMakeLists.txt  README.md
src/main/cpp/bvp/: CMakeLists.txt  bvp.cpp  bvp.hpp
src/main/cpp/felib/: AbstractBasisFunction.hpp  CMakeLists.txt  HatFunction.cpp  HatFunction.hpp
src/main/python/bvp/: SimpleBVP1D.ipynb
src/test/cpp/bvp/: CMakeLists.txt  bvp_test.cpp
src/test/cpp/felib/: CMakeLists.txt  felib_test.cpp
