CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(FINITE_ELEMENTS)

ENABLE_TESTING()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/main/cpp)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/gtest-1.7.0/include)
ADD_SUBDIRECTORY(gtest-1.7.0)
SET(CMAKE_BUILD_TYPE DEBUG)

FIND_PACKAGE(GSL REQUIRED)

#ADD_DEFINITIONS(-D_GLIBCXX_USE_CXX11_ABI=0)

ADD_SUBDIRECTORY(src/main/cpp/felib)
ADD_SUBDIRECTORY(src/main/cpp/bvp)
ADD_SUBDIRECTORY(src/test/cpp/felib)
ADD_SUBDIRECTORY(src/test/cpp/bvp)
